# IDCardRecognition

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/libswt/: CMakeLists.txt  swt.h
app/src/main/cpp/libswt/src/: api.c  ccv.h  jni_include.h  jni_main.c  memory.c  swt.c
app/src/main/java/com/arseeds/idcard/: CameraActivity.java  CameraManager.java
app/src/main/res/layout/: activity_camera.xml
